{
    "name": "InputManager",
    "maps": [
        {
            "name": "Movement",
            "id": "5e3ecedf-6d16-40f0-850a-6db864bb142f",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "4f7ac0be-c61e-4bff-8020-f401bb7fe9b9",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScrollDelta",
                    "type": "Value",
                    "id": "df984777-d58e-4c63-a29b-031daaadedaf",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRight",
                    "type": "Button",
                    "id": "8f797fd7-e02c-4014-9796-5cad8dde736d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fd68ad3-3a31-4702-ac20-a4f90cee30b1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameControls",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcb6e9eb-0d52-4987-890c-4e522518cc44",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameControls",
                    "action": "MouseScrollDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a52afe14-946b-4a05-83fd-da445025ef45",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameControls",
                    "action": "MouseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "a9c4216f-cbbb-4a89-bd4a-5eac56a256fd",
            "actions": [
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "4b75e34d-0484-44a9-b6c4-8f71c91c94be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1408703d-ab2b-4898-9b84-7a96feb697e6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameControls",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GameControls",
            "bindingGroup": "GameControls",
            "devices": []
        }
    ]
}